# emirates-fixtures

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  README.md  pyproject.toml
.github/workflows/: run-sync.yaml
emirates_fixtures/: __init__.py  constants.py  emirates.py  google_calendar.py  sync.py
